spade-tests/src/snapshots/spade_tests__integration__trait_self_wrong_impl_return_type.snap
---
source: spade-tests/src/integration.rs
---
trait X {
    fn fun(self) -> Self;
}

struct A {}
struct B {}

impl X for A {
    fn fun(self) -> B {
        self
    }
}


error: Return type does not match trait
  ┌─ testinput:9:21
  │
2 │     fn fun(self) -> Self;
  │                     ---- To match the trait
  ·
9 │     fn fun(self) -> B {
  │                     ^ Expected Self
